--- a/manifest.json
+++ b/manifest.json
@@ -54,18 +54,25 @@
     "page.html"
   ],
   "commands": {
-    "open-fanyi-on-right": {
-      "description": "open new fanyi on right",
-      "suggested_key": {
-        "default": "Alt+Shift+2",
-        "mac": "MacCtrl+Shift+2"
-      }
-    },
     "open-work-table": {
       "description": "open work table",
       "suggested_key": {
         "default": "Alt+Shift+1",
         "mac": "MacCtrl+Shift+1"
+      }
+    },
+    "open-important-table": {
+      "description": "open important table(tencent doc stared)",
+      "suggested_key": {
+        "default": "Alt+Shift+2",
+        "mac": "MacCtrl+Shift+2"
+      }
+    },
+    "open-fanyi-on-right": {
+      "description": "open new fanyi on right",
+      "suggested_key": {
+        "default": "Alt+Shift+3",
+        "mac": "MacCtrl+Shift+3"
       }
     },
     "show-fanyi-inpage": {
