--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "fanyi sidebar",
-  "description": "Chrome extension to show sidebar on web page",
+  "name": "Fanyi English Dictionary",
+  "description": "Chrome extension to show dictionary on web page",
   "version": "0.0.1",
   "options_page": "page.html?page=settings",
   "permissions": [
@@ -17,7 +17,7 @@
   ],
   "browser_action": {
     "default_icon": "img/favicon.png",
-    "default_title": "fanyi sidebar",
+    "default_title": "Fanyi Dictionary",
     "default_popup": "option/options.html"
   },
   "icons": {
